Bug 226562 - Contact Names are not correctly sorted
Summary: Contact Names are not correctly sorted
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-12 16:24 UTC by Albert Astals Cid
Modified: 2010-02-15 21:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2010-02-12 16:24:33 UTC
Version:           4.4 (using 4.4.00 (KDE 4.4.0), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.31-19-generic

In the contact list names with accentuated letters are at the end which makes no sense, that is i have

Alba
Javier
Zulema
Álvaro

And Álvaro should never be at the end of the list
Comment 1 Tobias Koenig 2010-02-14 10:12:48 UTC
SVN commit 1089852 by tokoe:

Make sure that names are sorted locale aware

BUG: 226562


 M  +2 -0      contactsfilterproxymodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1089852
Comment 2 Albert Astals Cid 2010-02-15 21:38:52 UTC
Should this be backported?