Make sure that names are sorted locale aware

BUG: 226562

svn path=/trunk/KDE/kdepim/; revision=1089852